--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
 
   <link rel="stylesheet" href="css/aos.css">
-
+  <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -44,7 +44,16 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <header class="site-navbar py-1" role="banner">
+
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+          style="max-width: 70px; padding-left: 10px;"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      </nav>
+    <!-- <header class="site-navbar py-1" role="banner">
 
       <div class="container">
         <div class="row align-items-center">
@@ -70,34 +79,42 @@
         </div>
       </div>
 
-    </header>
+    </header> -->
 
-    <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade"
+    <div class="site-blocks-cover inner-page-cover head" style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; "
+    data-aos="fade"
       data-stellar-background-ratio="0.5">
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
+      <div class="container content">
+        <div class="row align-items-center justify-content-center text-center ">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light">About Travelers</h1>
-            <div><a href="index.html">Home</a> <span class="mx-2 text-white">&bullet;</span> <span
-                class="text-white">About</span></div>
+            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">ABOUT</h1>
+            <div style="font-size: 17px; font-weight: 500;">
+              <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
+              <span class="mx-2 text-white" >&bullet;</span>
+              <a href="index.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+              <span class="mx-2 text-white"  >&bullet;</span>
+              <a href="index.html" style="color: rgb(236, 234, 234);">Bus Details</a>
+            </div>
 
           </div>
         </div>
       </div>
+
+      
     </div>
 
 
 
     <div class="site-section" data-aos="fade-up">
-      <div class="container">
+      <div class="container about">
         <div class="row align-items-center">
           <div class="col-md-6 mb-5 mb-md-0">
-            <img src="images/test.jpg" alt="Image" class="img-fluid rounded">
+            <img src="images/test.jpg" alt="Image" class="img-fluid rounded" style="filter: contrast(80%); height: 300px; width: 500px;">
           </div>
           <div class="col-md-6 pl-md-5">
-            <h2 class="font-weight-light text-black mb-4">About Project</h2>
-            <p>The project entitled “Bus Pass System” is developed using HTML, CSS and Javascript as Front-end technologies.
+            <h2 class="font-weight-light text-black mb-4">Bus Pass System</h2>
+            <p>Bus Pass System is developed using HTML, CSS and Javascript as Front-end technologies.
               Bus pass registration is useful for passengers who are facing problems with the current manual work of bus
               pass registration and renewal. His/her renewal or registration can be done through online transaction. In
               the manual system, the user has to go on particular date and time, if they fail then the renewal cannot be
@@ -112,30 +129,7 @@
       </div>
     </div>
 
-    <div class="site-section">
-      <div class="container ">
-        <div class="row">
-          <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
-            <a href="#" class="unit-1 text-center">
-              <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
-              <div class="unit-1-text">
-                <h3 class="unit-1-heading">Riya Gaur</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
-            <a href="#" class="unit-1 text-center">
-              <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
-              <div class="unit-1-text">
-                <h3 class="unit-1-heading">Sameeksha Rathi</h3>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
+    
 
 
 
