--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,9 @@
 
   <link rel="stylesheet" href="css/Bus.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  
 
 </head>
 
@@ -75,8 +76,8 @@
 
     </header> -->
 
-    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%;">
-      <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 10px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
