--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -77,7 +78,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-center text-center main">
 
-                <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
+                <div class="col-md-12">
                     <h1 class="text-white font-weight-bold">Bus Pass System</h1>
                     <p class="mb-5">A bus ride is like being in another world.</p>
                     <p><a href="book.php" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
@@ -90,23 +91,16 @@
 
     </div>
 
-    <div class="scroll-animations">
-        <div class="animated">
-          <span>☎</span>
-          <h3>Number One</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
-        </div>
-    </div>
-    
+
 
     <div class="site-section p-0">
 
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-7">
-                    <h1 class="heading margin-bottom: 80px animate__animated animate__bounceOutRight animate_delay animate__repeat-3">Our Destinations</h1>
-                    <hr>
-                    <p class="subheading">Choose Your Next Destination <img class="ml-1 animate__animated animate__bounceOutRight animate_delay-60s animate__repeat-10" src ="images/travel.png" style="max-width: 90px;"></p>
+                    <h1 class="heading margin-bottom: 80px" data-aos="fade-right" >Our Destinations</h1>
+                    <hr data-aos="fade-right" data-aos-delay="500">
+                    <p class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right" src ="images/travel.png" style="max-width: 90px;"></p>
                 </div>
             </div>
             <div class="row">
@@ -171,8 +165,8 @@
         <div class="container">
         <div class="row  mb-5">
             <div class="col-md-7 " style="margin-bottom: 80px;">
-                <h1 class="heading">TEAM</h1>
-                <hr>
+                <h1 class="heading" data-aos="fade-right">TEAM</h1>
+                <hr data-aos="fade-right" data-aos-delay="500">
             </div>
         </div>
         <div class="container ">
@@ -211,8 +205,8 @@
     </div>
 
 
-
-    <footer class="site-footer">
+    <img class="ml-1 bus" data-aos="fade-right" src ="images/travel.png" style="max-width: 150px;">
+    <footer class="site-footer">     
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -262,7 +256,14 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
+    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
     <script src="js/bus.js"></script>
 </body>
 
 </html>
+
+
+
+<!-- animate__animated animate__bounceOutRight animate_delay-60s animate__repeat-10 -->
