--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -45,8 +46,8 @@
     </div> -->
 
     <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: #fff; ">
-        <a class="navbar-brand" href="#"><img src = "images/logo.png" alt="calligraphy-fonts"
-                border="0" style="max-width: 70px; padding-left: 10px;"></a>
+        <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+                style="max-width: 70px; padding-left: 10px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -73,8 +74,9 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover" style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px; opacity: 0.93;" data-aos="fade"
-        data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover"
+        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px; opacity: 0.93;"
+        data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center main">
 
@@ -98,9 +100,10 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-7">
-                    <h1 class="heading margin-bottom: 80px" data-aos="fade-right" >Our Destinations</h1>
+                    <h1 class="heading margin-bottom: 80px" data-aos="fade-right">Our Destinations</h1>
                     <hr data-aos="fade-right" data-aos-delay="500">
-                    <p class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right" src ="images/travel.png" style="max-width: 90px;"></p>
+                    <p class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right"
+                            src="images/travel.png" style="max-width: 90px;"></p>
                 </div>
             </div>
             <div class="row">
@@ -163,39 +166,39 @@
 
     <div class="site-section">
         <div class="container">
-        <div class="row  mb-5">
-            <div class="col-md-7 " style="margin-bottom: 80px;">
-                <h1 class="heading" data-aos="fade-right">TEAM</h1>
-                <hr data-aos="fade-right" data-aos-delay="500">
-            </div>
-        </div>
-        <div class="container ">
-            <div class="row">
-                <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
-                        <div class="unit-1-text">
-                            <h3 class="unit-1-heading">Riya Gaur</h3>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
-                        <div class="unit-1-text">
-                            <h3 class="unit-1-heading">Sameeksha Rathi</h3>
-                        </div>
-                    </a>
+            <div class="row  mb-5">
+                <div class="col-md-7 " style="margin-bottom: 80px;">
+                    <h1 class="heading" data-aos="fade-right">TEAM</h1>
+                    <hr data-aos="fade-right" data-aos-delay="500">
                 </div>
             </div>
+            <div class="container ">
+                <div class="row">
+                    <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
+                        <a href="#" class="unit-1 text-center">
+                            <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
+                            <div class="unit-1-text">
+                                <h3 class="unit-1-heading">Riya Gaur</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
+                        <a href="#" class="unit-1 text-center">
+                            <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
+                            <div class="unit-1-text">
+                                <h3 class="unit-1-heading">Sameeksha Rathi</h3>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
     </div>
 
 
     <div class="site-section p-0 mt-5">
         <div class="container">
-            <div class="row text-center book" >
+            <div class="row text-center book">
                 <div class="col-md-12">
                     <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
                     <p class="mb-5"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
@@ -205,47 +208,194 @@
     </div>
 
 
-    <img class="ml-1 bus" data-aos="fade-right" src ="images/travel.png" style="max-width: 150px;">
-    <footer class="site-footer">     
-        <div class="container">
+    <img class="ml-1 bus" data-aos="fade-right" src="images/travel.png" style="max-width: 150px;">
+
+
+    <!-- <section class="footer">
+        <section class="sec1 ">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="mb-5">
-                        <h3 class="footer-heading mb-4">About Travelers</h3>
-                        <p>Provides student a pass for their daily life to travel to/from GLA University, Mathura</p>
-                    </div>
+                <section class="about col-md-7">
+                    <h2>ABOUT</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae perferendis deleniti
+                        expedita id
+                        praesentium cumque, blanditiis maxime corrupti unde veritatis delectus, explicabo nobis. Dolor,
+                        modi
+                        quae maxime, autem aut dolorum ipsa quaerat aliquid, expedita voluptatem ducimus unde? Quibusdam
+                        magnam sint animi vero facere ipsam dolorem aut, illo hic, perferendis repudiandae.</p>
+                </section>
+                <section class="link3 col-md-2">
+                    <h2>CONTACT US</h2>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-home"></i><span>4025, Yamuna Hostel, GLA University</span></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-envelope"></i><span>riya.gaur_cs18@gla.ac.in</span></a></li>
+                        <li><a href="#"><i class="fa fa-phone-square"></i><span>Mobile: 9756482150</span></a></li>
+                        <li><a href="https://www.github.com/RiyaGaur" target="_blank"><i
+                                    class="fa fa-github-square"></i><span>Riya Gaur</span></a></li>
+                    </ul>
+                </section>
+        </section>
+        </div>
+        <hr>
+        <section class="sec2">
+            <p>Register for Free</p>
+            <a class="button" href="#">Sign Up</a>
+        </section>
+        <hr>
+        <section class="sec3">
+            <ul>
+                <li><a href="https://www.facebook.com/riya.gaur.121398/" target="_blank"><i
+                            class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/RiyaGau85455794/" target="_blank"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li><a href="#" target="_blank"><i class="fa fa-google"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/riya-gaur-6aa717194/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/riyagaur_2908/" target="_blank"><i
+                            class="fa fa-instagram"></i></a></li>
+            </ul>
+        </section>
+        <section class="sec4">
+            <p>Copyright © 2020 All Rights Reserved by <a href="https://www.github.com/RiyaGaur" target="_blank">Riya
+                    Gaur</a></p>
+        </section> -->
+
+
+    <!-- Footer -->
+    <footer class="page-footer font-small stylish-color-dark pt-4">
+
+        <!-- Footer Links -->
+        <div class="container text-center text-md-left">
+
+            <!-- Grid row -->
+            <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-md-6 mx-auto">
+
+                    <!-- Content -->
+                    <h5 class="font-weight-bold text-white mt-3 mb-4">Footer Content</h5>
+                    <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
+                        amet,
+                        consectetur
+                        adipisicing elit.</p>
 
                 </div>
-                <div class="col-lg-4 mb-5 mb-lg-0" style="margin-left: auto;">
-                    <div class="row mb-5">
-                        <div class="col-md-12">
-                            <h3 class="footer-heading mb-4">Navigations</h3>
-                        </div>
-                        <div class="col-md-6 col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                            </ul>
-                        </div>
+                <!-- Grid column -->
+                <div class="col-md-2 mx-auto">
 
-                    </div>
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-white mt-3 mb-4">Places</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="bus_details.html"> Delhi</a>
+                        </li>
+                        <li>
+                            <a href="bus_details.html"> Agra</a>
+                        </li>
+                        <li>
+                            <a href="bus_details.html"> Mathura</a>
+                        </li>
+                        <li>
+                            <a href="bus_details.html"> Vrindavan</a>
+                        </li>
+                        <li>
+                            <a href="bus_details.html"> Barsana</a>
+                        </li>
+                        <li>
+                            <a href="bus_details.html">Chaumuhan</a>
+                        </li>
+                    </ul>
                 </div>
 
+                <!-- Grid column -->
+                <div class="col-md-2 mx-auto">
+
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-white mt-3 mb-4">Navigations</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <i class="fa fa-home"> </i><a href="#"> Home</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-bus"> </i><a href="about.html"> About</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-ticket"> </i><a href="#"> Manage Pass</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
 
             </div>
-            <div class="row pt-5 mt-5 text-center">
-                <div class="col-md-12">
-                    <p>
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved
-                    </p>
-                </div>
+            <!-- Grid row -->
 
-            </div>
+        </div>
+        <!-- Footer Links -->
+
+        <!--<hr>
+
+        <ul class="list-unstyled list-inline text-center py-2">
+            <li class="list-inline-item">
+                <h5 class="mb-1 text-white">Book your Seat</h5>
+            </li>
+            <li class="list-inline-item">
+                <a href="#!" class="button btn btn-danger btn-rounded" style="display: inline-block;
+                    padding: 10px 25px;
+                    text-decoration: none;
+                    color: white;
+                    background-color: red;
+                    margin-left: 10px;
+                    border-radius: 20px;
+                    transition: 0.4s;
+                    font-size: 18px;">Book Now</a>
+            </li>
+        </ul> -->
+
+
+        <!-- <hr>
+        <div class="social">
+            <ul class="list-unstyled list-inline text-center">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-fb mx-1">
+                        <i class="fa fa-facebook"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-tw mx-1">
+                        <i class="fa fa-twitter"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-gplus mx-1">
+                        <i class="fa fa-google"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-li mx-1">
+                        <i class="fa fa-linkedin"> </i>
+                    </a>
+                </li>
+            </ul>
+        </div> -->
+
+        <div class="footer-copyright text-center py-3">
+            <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
         </div>
     </footer>
-    
+    <!-- Footer -->
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -256,7 +406,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init();</script>
     <script src="js/bus.js"></script>
