--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Manage Pass</a>
+                    <a class="nav-link" href="Form.html">Manage Pass</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="bus_details.html">Bus Details</a>
@@ -83,7 +83,7 @@
                 <div class="col-md-12">
                     <h1 class="text-white font-weight-bold">Bus Pass System</h1>
                     <p class="mb-5">A bus ride is like being in another world.</p>
-                    <p><a href="book.php" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
+                    <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
                     <p><a href="TAFL2-Riya Gaur.pdf" download="Assignment">Download the pdf</a></p>
                 </div>
@@ -201,7 +201,7 @@
             <div class="row text-center book">
                 <div class="col-md-12">
                     <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-                    <p class="mb-5"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+                    <p class="mb-5"><a href="Form.html" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
                 </div>
             </div>
         </div>
@@ -326,7 +326,7 @@
                             <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
                         </li>
                         <li>
-                            <i class="fa fa-ticket"> </i><a href="#"> Manage Pass</a>
+                            <i class="fa fa-ticket"> </i><a href="Form.html"> Manage Pass</a>
                         </li>
                         <li>
                             <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
