--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <footer class="page-footer font-small stylish-color-dark pt-4">
 
         <!-- Footer Links -->
-        <div class="container text-center text-md-left">
+        <div class="container text-center text-md-left py-4">
 
             <!-- Grid row -->
             <div class="row">
@@ -342,51 +342,7 @@
         </div>
         <!-- Footer Links -->
 
-        <!--<hr>
 
-        <ul class="list-unstyled list-inline text-center py-2">
-            <li class="list-inline-item">
-                <h5 class="mb-1 text-white">Book your Seat</h5>
-            </li>
-            <li class="list-inline-item">
-                <a href="#!" class="button btn btn-danger btn-rounded" style="display: inline-block;
-                    padding: 10px 25px;
-                    text-decoration: none;
-                    color: white;
-                    background-color: red;
-                    margin-left: 10px;
-                    border-radius: 20px;
-                    transition: 0.4s;
-                    font-size: 18px;">Book Now</a>
-            </li>
-        </ul> -->
-
-
-        <!-- <hr>
-        <div class="social">
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb mx-1">
-                        <i class="fa fa-facebook"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-tw mx-1">
-                        <i class="fa fa-twitter"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-gplus mx-1">
-                        <i class="fa fa-google"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-li mx-1">
-                        <i class="fa fa-linkedin"> </i>
-                    </a>
-                </li>
-            </ul>
-        </div> -->
 
         <div class="footer-copyright text-center py-3">
             <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
